--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@
         <div class="container title course-title">
           <h2>CURSOS</h2>
         </div>
+        <div id="video">
+          <iframe
+            class="video"
+            src="https://www.youtube.com/embed/0N8RCrblAuw"
+            title="ECO APO"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </div>
         <div class="accordion open accordion-flush container" id="c1Flush">
           <div class="accordion-item">
             <h2 class="accordion-header">
